_sass/minimal-mistakes/_custom.scss
.credits {
  margin-top: 2em;
  display: table;
  width: 50%;
  table-layout: fixed;
  border-spacing: 0.2em;
  margin-left: auto;
  margin-right: auto;
}
.user {
  @import url("https://use.fontawesome.com/releases/v5.6.1/css/all.css");
  display: table-cell;
  margin: auto;
  text-align: center;
  vertical-align: middle;
  a, a:hover {
    text-decoration: none !important;
  }
  img {
    border-radius: 50%;
    width: 80%;
  }
  h3 {
    margin: 0.3em !important;
  }
  p {
    opacity: 0.65;
    margin-bottom: 0.3em !important;
  }
}

.version_table {
  th, td {
    text-align: center;
    font-weight: bold;
  }
}

tt,
code,
kbd,
samp,
pre {
  font-family: $monospace;
  border: 1px solid mix(#eaeaea, #262a34, 20%);
}

pre {
  background-color: #252b35 !important;
}

table {
  border: 1px solid #bdc1c4;
}

// yes i know this is awful

.wrap-collabsible-1, .wrap-collabsible-2, .wrap-collabsible-3, .wrap-collabsible-4 {
    margin-bottom: 1.2rem 0;
    padding-left: .5em;
}

input[type='checkbox'] {
  display: none;
}

.lbl-toggle-1, .lbl-toggle-2, .lbl-toggle-3, .lbl-toggle-4 {
    -webkit-user-select: none; /* Safari */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* IE10+/Edge */
    user-select: none; /* Standard */
}

.lbl-toggle-1::before, .lbl-toggle-2::before, .lbl-toggle-3::before, .lbl-toggle-4::before {
    content: ' ';
    display: inline-block;
    border-top: 5px solid transparent;
    border-bottom: 5px solid transparent;
    border-left: 5px solid currentColor;
    vertical-align: middle;
    margin-right: .7rem;
    transform: translateY(-2px);
    transition: transform .2s ease-out;
}

.toggle-1:checked + .lbl-toggle-1::before, .toggle-2:checked + .lbl-toggle-2::before, .toggle-3:checked + .lbl-toggle-3::before, .toggle-4:checked + .lbl-toggle-4::before {
    transform: rotate(90deg) translateX(-3px);
}

.collapsible-content-1, .collapsible-content-2, .collapsible-content-3, .collapsible-content-4 {
    max-height: 0px;
    overflow: hidden;
    transition: max-height .25s ease-in-out;
}

.toggle-1:checked + .lbl-toggle-1 + .collapsible-content-1, .toggle-2:checked + .lbl-toggle-2 + .collapsible-content-2, .toggle-3:checked + .lbl-toggle-3 + .collapsible-content-3, .toggle-4:checked + .lbl-toggle-4 + .collapsible-content-4 {
    max-height: 100vh;
}

.content-inner .collapsible-content-1 .collapsible-content-2 .collapsible-content-3 .collapsible-content-4 {
    padding: .5rem;
}

